--- a/sites/testing.virt.edge-sites.net/00_install-config/kustomization.yaml
+++ b/sites/testing.virt.edge-sites.net/00_install-config/kustomization.yaml
@@ -1,5 +1,5 @@
 bases:
-  - git::https://github.com/yrobla/kni-blueprint-pae.git//profiles/production.baremetal/00_install-config
+  - git::https://github.com/yrobla/kni-blueprint-pae.git//profiles/testing.libvirt/00_install-config
 
 patches:
 - install-config.patch.yaml
