Fix patches for memory

--- a/profiles/testing.libvirt/01_cluster-mods/openshift/01_memory_cpu_settings_master.patch.yaml
+++ b/profiles/testing.libvirt/01_cluster-mods/openshift/01_memory_cpu_settings_master.patch.yaml
@@ -1,5 +1,8 @@
 apiVersion: machine.openshift.io/v1beta1
 kind: Machine
+metadata:
+  name: .*
+  namespace: openshift-machine-api
 spec:
   providerSpec:
     value:
