--- a/profiles/testing.libvirt/01_cluster-mods/openshift/02_memory_cpu_settings_worker.patch.yaml
+++ b/profiles/testing.libvirt/01_cluster-mods/openshift/02_memory_cpu_settings_worker.patch.yaml
@@ -1,5 +1,8 @@
 apiVersion: machine.openshift.io/v1beta1
 kind: MachineSet
+metadata:
+  name: .*
+  namespace: openshift-machine-api
 spec:
   template:
     spec:
