--- a/profiles/production.gcp/requirements.yaml
+++ b/profiles/production.gcp/requirements.yaml
@@ -1,4 +1,4 @@
 kubectl: https://dl.k8s.io/v1.16.0/kubernetes-client-linux-amd64.tar.gz
-kustomize: https://github.com/kubernetes-sigs/kustomize/releases/download/v3.2.0/kustomize_3.2.0_linux_amd64
+kustomize: https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv3.5.4/kustomize_v3.5.4_linux_amd64.tar.gz
 oc: https://mirror.openshift.com/pub/openshift-v4/clients/ocp/4.3.3/openshift-client-linux-4.3.3.tar.gz
 openshift-install: https://mirror.openshift.com/pub/openshift-v4/clients/ocp/4.3.3/openshift-install-linux-4.3.3.tar.gz
