--- a/profiles/testing.libvirt/01_cluster-mods/kustomization.yaml
+++ b/profiles/testing.libvirt/01_cluster-mods/kustomization.yaml
@@ -2,5 +2,15 @@ bases:
 - ../../../base/01_cluster-mods
 patches:
 - manifests/00_downscale_ingress_replicas.patch.yaml
-- openshift/01_memory_cpu_settings_master.patch.yaml
-- openshift/02_memory_cpu_settings_worker.patch.yaml
+- target:
+    group: machine.openshift.io
+    version: v1beta1
+    kind: MachineSet
+    name: .*
+  path: openshift/01_memory_cpu_settings_master.patch.yaml
+- target:
+    group: machine.openshift.io
+    version: v1beta1
+    kind: Machine
+    name: .*
+  path: openshift/02_memory_cpu_settings_worker.patch.yaml
